--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -28,6 +28,7 @@
 <script lang="JavaScript">
 
 </script>
+<script src="jquery-latest.js"></script>
 <script src="svgboard.js"></script>
 <script src="boardmanager.js"></script>
 </body>
